# CodeStream

./: .gitignore  README.md  docker-compose.yml
.claude/: launch.json
frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/lib/: remoteCursors.js
frontend/src/pages/: Auth.jsx  Editor.jsx  Projects.jsx
services/: .dockerignore  Cargo.toml  docker-compose.yaml
services/auth-user-service/: Cargo.toml  Dockerfile
services/auth-user-service/migrations/: 20260504132045_create_users_table.sql  20260630090000_create_projects_and_access.sql
services/auth-user-service/src/: main.rs  models.rs  state.rs
services/auth-user-service/src/handlers/: auth.rs  projects.rs
services/code-execution-service/: Cargo.toml  Dockerfile
services/code-execution-service/src/: main.rs  sandbox.rs  state.rs
services/code-execution-service/src/handlers/: execute.rs
services/crdt-sync-service/: Cargo.toml  Dockerfile
services/crdt-sync-service/src/: consumer.rs  main.rs  rga.rs  state.rs
services/crdt-sync-service/src/handlers/: documents.rs
services/session-gateway-service/: Cargo.toml  Dockerfile
services/session-gateway-service/src/: consumer.rs  main.rs  state.rs
services/session-gateway-service/src/handlers/: ws.rs
services/shared/: Cargo.toml
services/shared/src/: auth.rs  lib.rs  rabbitmq.rs
