[workspace]
resolver = "2"
members = ["auth-user-service", "code-execution-service","crdt-sync-service","session-gateway-service", "shared"]

[workspace.dependencies]
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = "0.28"
axum = "0.7.9"
tower-http = { version = "0.5", features = ["cors"] }
