[package]
name = "code-execution-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
bollard = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
tower-http = { workspace = true }
dotenvy = "0.15.7"
uuid = { version = "1.11", features = ["v4"] }
futures-util = "0.3"
