[package]
name = "session-gateway-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
tower-http = { workspace = true }
dotenvy = "0.15.7"
uuid = { version = "1.11", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
lapin = "2"
futures-util = "0.3"
