[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
